[package]
name = "zephyr"
version = "0.3.1"
edition = "2021"
authors = ["Zackary Troop"]
description = "A Unix task scheduler with dynamic intervals"
license = "MIT"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
users = "0.11"
anyhow = "1.0"
config = "0.14"
async-trait = "0.1"
rusqlite = { version = "0.29", features = ["bundled"] }
dirs = "5.0"
tempfile = "3.10"
cron = "0.12"

[dev-dependencies]
tempfile = "3.10"