[package]
name = "zephyr-scheduler"
version = "0.3.2"
edition = "2021"
authors = ["Zackary Troop"]
description = "A modern, lightweight task scheduler for Unix-like systems with interval and CRON scheduling, sleep handling, and systemd/launchd service integration"
license = "MIT"
repository = "https://github.com/ztroop/zephyr"
homepage = "https://github.com/ztroop/zephyr"
documentation = "https://github.com/ztroop/zephyr"
readme = "README.md"
keywords = ["scheduler", "cron", "task", "automation", "systemd", "launchd", "unix"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "zephyr"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.4", features = ["derive"] }
users = "0.11"
anyhow = "1.0"
config = "0.14"
async-trait = "0.1"
rusqlite = { version = "0.29", features = ["bundled"] }
dirs = "5.0"
cron = "0.12"

[dev-dependencies]
tempfile = "3.10"